samples/syntaxError/bad.c
int main()
{
#ifdef A
}
#endif
